<resources>
    <string name="app_name">SharedPref</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="no_handphone">No Handphone</string>
    <string name="age">Age</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="suka_ngoding">Suka Ngoding</string>
    <string name="simpan">Simpan</string>
    <string name="phone_no">Phone No</string>
    <string name="love_code">Love Code?</string>
    <string name="save">Save</string>
</resources>
