<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.andriginting.dbsqlite.Main2Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Andri Suranta Ginting"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="andris.ginting@gmail.com"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="123456"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="20"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_code"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/tv_is_love_mu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="No"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>

</LinearLayout>
